--- a/burren.html
+++ b/burren.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 9.4/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-clare/lough-avalla-farm-loop--2" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/lough-avalla-farm-loop--2" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 8.4/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-clare/mullaghmore-and-burren-park-circular" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/mullaghmore-and-burren-park-circular" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,74 +78,102 @@
                     <li><strong>Rating:</strong> 9.4/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-clare/fanore-and-blackhead-loop" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/fanore-and-blackhead-loop" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
 
         <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
-            <div>            
-                <img src="assets/images/burren/brown-hairstreak.JPG" alt="Brown Hairstreak (Thecla betulae)" class="parks-images">
-                <figcaption>Brown Hairstreak (Thecla betulae)</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/burren/brown-hairstreak.JPG" alt="Brown Hairstreak (Thecla betulae)" class="parks-images">
+                    <figcaption>Brown Hairstreak (Thecla betulae)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/burren/pine-marten.jpg" alt="Pine Marten (martes martes)" class="parks-images">
-                <figcaption>Pine Marten (martes martes)</figcaption>
+                <figure>
+                    <img src="assets/images/burren/pine-marten.jpg" alt="Pine Marten (martes martes)" class="parks-images">
+                    <figcaption>Pine Marten (martes martes)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/burren/common-sandpiper.jpg" alt="Common Sandpiper (Actitus hypoleucos)" class="parks-images">
-                <figcaption>Common Sandpiper (Actitus hypoleucos)</figcaption>
+                <figure>
+                    <img src="assets/images/burren/common-sandpiper.jpg" alt="Common Sandpiper (Actitus hypoleucos)" class="parks-images">
+                    <figcaption>Common Sandpiper (Actitus hypoleucos)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/burren/badger.jpg" alt="Badger (Meles meles)" class="parks-images">
-                <figcaption>Badger (Meles meles)</figcaption>
+                <figure>
+                    <img src="assets/images/burren/badger.jpg" alt="Badger (Meles meles)" class="parks-images">
+                    <figcaption>Badger (Meles meles)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/burren/stoat.jpg" alt="Irish Stoat (Mustela erminea hibernica)" class="parks-images">
-                <figcaption>Irish Stoat (Mustela erminea hibernica)</figcaption>
-            </div>
-        </div>
-
-        <div class="div-parks-images">
-            <div class="views-images">
-                <img src="assets/images/burren/moher-cliffs.jpg" alt="Cliffs of Moher" class="parks-images">
-                <figcaption>Cliffs of Moher</figcaption>
-            </div>
-            <div class="views-images">            
-                <img src="assets/images/burren/ailiwee-caves.webp" alt="Ailwee Caves" class="parks-images">
-                <figcaption>Ailwee Caves</figcaption>
-            </div>
-            <div class="views-images">
-                <img src="assets/images/burren/doolin-cave.jpg" alt="Doolin Caves" class="parks-images">
-                <figcaption>Doolin Caves</figcaption>
-            </div>
-            <div class="views-images">
-                <img src="assets/images/burren/aran-islands.jpg" alt="Aran Islands" class="parks-images">
-                <figcaption>Aran Islands</figcaption>
+                <figure>
+                    <img src="assets/images/burren/stoat.jpg" alt="Irish Stoat (Mustela erminea hibernica)" class="parks-images">
+                    <figcaption>Irish Stoat (Mustela erminea hibernica)</figcaption>
+                </figure>
             </div>
         </div>
 
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/burren/poulnabrone-dolmen.webp" alt="Poulnabrone Dolmen" class="parks-images">
-                <figcaption>Poulnabrone Dolmen</figcaption>
+                <figure>
+                    <img src="assets/images/burren/moher-cliffs.jpg" alt="Cliffs of Moher" class="parks-images">
+                    <figcaption>Cliffs of Moher</figcaption>
+                </figure>
             </div>
-            <div>            
-                <img src="assets/images/burren/caherconnell-stone-fort.png" alt="Caherconnell Stone Fort" class="parks-images">
-                <figcaption>Caherconnell Stone Fort</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/burren/doonagore-castle.jpg" alt="Doonagore Castle" class="parks-images">
-                <figcaption>Doonagore Castle</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/burren/poulawack-cairn.jpg" alt="Poulawack Cairn" class="parks-images">
-                <figcaption>Poulawack Cairn</figcaption>
+            <div> 
+                <figure>           
+                    <img src="assets/images/burren/ailiwee-caves.webp" alt="Ailwee Caves" class="parks-images">
+                    <figcaption>Ailwee Caves</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/burren/ucht-mama-ruins.jpg" alt="Ucht Mama Ruins" class="parks-images">
-                <figcaption>Ucht Mama Ruins</figcaption>
+                <figure>
+                    <img src="assets/images/burren/doolin-cave.jpg" alt="Doolin Caves" class="parks-images">
+                    <figcaption>Doolin Caves</figcaption>                
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/burren/aran-islands.jpg" alt="Aran Islands" class="parks-images">
+                    <figcaption>Aran Islands</figcaption>
+                </figure>
+            </div>
+        </div>
+
+        <div class="div-parks-images">
+            <div>
+                <figure>
+                    <img src="assets/images/burren/poulnabrone-dolmen.webp" alt="Poulnabrone Dolmen" class="parks-images">
+                    <figcaption>Poulnabrone Dolmen</figcaption>
+                </figure>
+            </div>
+            <div>   
+                <figure>      
+                    <img src="assets/images/burren/caherconnell-stone-fort.png" alt="Caherconnell Stone Fort" class="parks-images">
+                    <figcaption>Caherconnell Stone Fort</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/burren/doonagore-castle.jpg" alt="Doonagore Castle" class="parks-images">
+                    <figcaption>Doonagore Castle</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/burren/poulawack-cairn.jpg" alt="Poulawack Cairn" class="parks-images">
+                    <figcaption>Poulawack Cairn</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/burren/ucht-mama-ruins.jpg" alt="Ucht Mama Ruins" class="parks-images">
+                    <figcaption>Ucht Mama Ruins</figcaption>
+                </figure>
             </div>
         </div>
 
