--- a/glenveah.html
+++ b/glenveah.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 10/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/glenveagh-castle" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/glenveagh-castle" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 9.0/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/lough-veagh-trail-to-glenveagh-castle" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/lough-veagh-trail-to-glenveagh-castle" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 9.8/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/letterkenny-and-ailt-an-chorrain-circular" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/letterkenny-and-ailt-an-chorrain-circular" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
@@ -86,66 +86,94 @@
         <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/glenveagh/smooth-newt.webp" alt="Smooth Newt (Lissotriton vulgaris)" class="parks-images">
-                <figcaption>Smooth Newt (Lissotriton vulgaris)</figcaption>
-            </div>
-            <div>            
-                <img src="assets/images/glenveagh/brown-trout.jpg" alt="Brown Trout (Salmo trutta)" class="parks-images">
-                <figcaption>Brown Trout (Salmo trutta)</figcaption>
+                <figure>
+                    <img src="assets/images/glenveagh/smooth-newt.webp" alt="Smooth Newt (Lissotriton vulgaris)" class="parks-images">
+                    <figcaption>Smooth Newt (Lissotriton vulgaris)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/glenveagh/red-throated-diver.jpg" alt="Red-throated Diver (Gavia stellata)" class="parks-images">
-                <figcaption>Red-throated Diver (Gavia stellata)</figcaption>
+                <figure>            
+                    <img src="assets/images/glenveagh/brown-trout.jpg" alt="Brown Trout (Salmo trutta)" class="parks-images">
+                    <figcaption>Brown Trout (Salmo trutta)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/glenveagh/red-deer.jpg" alt="Red Deer (Cervus elaphus)" class="parks-images">
-                <figcaption>Red Deer (Cervus elaphus)</figcaption>
+                <figure>
+                    <img src="assets/images/glenveagh/red-throated-diver.jpg" alt="Red-throated Diver (Gavia stellata)" class="parks-images">
+                    <figcaption>Red-throated Diver (Gavia stellata)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/glenveagh/otter.jpg" alt="Otter (Lutra lutra)" class="parks-images">
-                <figcaption>Otter (Lutra lutra)</figcaption>
+                <figure>
+                    <img src="assets/images/glenveagh/red-deer.jpg" alt="Red Deer (Cervus elaphus)" class="parks-images">
+                    <figcaption>Red Deer (Cervus elaphus)</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/glenveagh/otter.jpg" alt="Otter (Lutra lutra)" class="parks-images">
+                    <figcaption>Otter (Lutra lutra)</figcaption>
+                </figure>
             </div>
         </div>
 
     <div class="div-parks-images">
-            <div class="views-images">
-                <img src="assets/images/glenveagh/malin-head.jpg" alt="Malin head" class="parks-images">
-                <figcaption>Malin head</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/glenveagh/malin-head.jpg" alt="Malin head" class="parks-images">
+                    <figcaption>Malin head</figcaption>
+                </figure>
             </div>
-            <div class="views-images">            
-                <img src="assets/images/glenveagh/mount-errigal.jpg" alt="Mount Errigal" class="parks-images">
-                <figcaption>Mount Errigal</figcaption>
+            <div> 
+                <figure>           
+                    <img src="assets/images/glenveagh/mount-errigal.jpg" alt="Mount Errigal" class="parks-images">
+                    <figcaption>Mount Errigal</figcaption>
+                </figure>
             </div>
-            <div class="views-images">
-                <img src="assets/images/glenveagh/poisoned-glen.jpg" alt="Poisoned Glen" class="parks-images">
-                <figcaption>Poisoned Glen</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/glenveagh/poisoned-glen.jpg" alt="Poisoned Glen" class="parks-images">
+                    <figcaption>Poisoned Glen</figcaption>
+                </figure>
             </div>
-            <div class="views-images">
-                <img src="assets/images/glenveagh/slieve-league-cliffs.jpg" alt="Slieve League Cliffs" class="parks-images">
-                <figcaption>Slieve League Cliffs</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/glenveagh/slieve-league-cliffs.jpg" alt="Slieve League Cliffs" class="parks-images">
+                    <figcaption>Slieve League Cliffs</figcaption>
+                </figure>
             </div>
         </div>
 
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/glenveagh/creevykeel-court-tomb.jpg" alt="Creevykeel Court Tomb" class="parks-images">
-                <figcaption>Creevykeel Court Tomb</figcaption>
+                <figure>
+                    <img src="assets/images/glenveagh/creevykeel-court-tomb.jpg" alt="Creevykeel Court Tomb" class="parks-images">
+                    <figcaption>Creevykeel Court Tomb</figcaption>
+                </figure>
             </div>
-            <div>            
-                <img src="assets/images/glenveagh/donegal-castle.jpg" alt="Donegal Castle" class="parks-images">
-                <figcaption>Donegal Castle</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/glenveagh/dunlewey-church.jpg" alt="Dunlewey Church" class="parks-images">
-                <figcaption>Dunlewey Church</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/glenveagh/glencolmcille-tower.jpg" alt="Glencolmcille Tower" class="parks-images">
-                <figcaption>Glencolmcille Tower</figcaption>
+            <div>     
+                <figure>       
+                    <img src="assets/images/glenveagh/donegal-castle.jpg" alt="Donegal Castle" class="parks-images">
+                    <figcaption>Donegal Castle</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/glenveagh/glenveagh-castle.jpg" alt="Glenveagh Castle" class="parks-images">
-                <figcaption>Glenveagh Castle</figcaption>
+                <figure>
+                    <img src="assets/images/glenveagh/dunlewey-church.jpg" alt="Dunlewey Church" class="parks-images">
+                    <figcaption>Dunlewey Church</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/glenveagh/glencolmcille-tower.jpg" alt="Glencolmcille Tower" class="parks-images">
+                    <figcaption>Glencolmcille Tower</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/glenveagh/glenveagh-castle.jpg" alt="Glenveagh Castle" class="parks-images">
+                    <figcaption>Glenveagh Castle</figcaption>
+                </figure>
             </div>
         </div>
 
