--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p id="why-visit-p">Ireland is well known for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything.</p>
             <details>
                 <summary>...</summary>
-                Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check out our webpage and go enjoy your time among nature. And remember, respect the mountains, and keep safe.</p>
+                Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check out our webpage and go enjoy your time among nature. And remember, respect the mountains, and keep safe.
             </details>
             <div id="home-div-photos">
                 <img src="assets/images/home-images/why-visit.jpg" alt="Beautiful landscape" class="why-visit-photos">
