--- a/killarney.html
+++ b/killarney.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 9/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/ross-castle-circular" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/ross-castle-circular" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 9.2/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/gap-of-dunloe-strickeen" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/gap-of-dunloe-strickeen" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 9.6/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/dunloe-to-lord-brandon-s-cottage" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/dunloe-to-lord-brandon-s-cottage" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
@@ -86,66 +86,94 @@
         <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
-                <figcaption>Marsh Fritillary (Euphydryas aurinia)</figcaption>
-            </div>
-            <div>            
-                <img src="assets/images/killarney-images/killarney-bat.jpg" alt="Lesser Horseshoe Bat (Rhinolophus hipposideros)" class="parks-images">
-                <figcaption>Lesser Horseshoe Bat (Rhinolophus hipposideros)</figcaption>
+                <figure>
+                    <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
+                    <figcaption>Marsh Fritillary (Euphydryas aurinia)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-salmon.jpg" alt="Atlantic salmon (Salmo salar)" class="parks-images">
-                <figcaption>Atlantic salmon (Salmo salar)</figcaption>
+                <figure>            
+                    <img src="assets/images/killarney-images/killarney-bat.jpg" alt="Lesser Horseshoe Bat (Rhinolophus hipposideros)" class="parks-images">
+                    <figcaption>Lesser Horseshoe Bat (Rhinolophus hipposideros)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-stonechat.jpg" alt="Stonechat (Saxicola torquata)" class="parks-images">
-                <figcaption>Stonechat (Saxicola torquata)</figcaption>
+                <figure>
+                    <img src="assets/images/killarney-images/killarney-salmon.jpg" alt="Atlantic salmon (Salmo salar)" class="parks-images">
+                    <figcaption>Atlantic salmon (Salmo salar)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
-                <figcaption>Sika Stags (Cervus nippon)</figcaption>
+                <figure>
+                    <img src="assets/images/killarney-images/killarney-stonechat.jpg" alt="Stonechat (Saxicola torquata)" class="parks-images">
+                    <figcaption>Stonechat (Saxicola torquata)</figcaption>
+                </figure>
             </div>
-        </div>
-
-        <div class="div-parks-images">
-            <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
-                <figcaption>View from Aghadoe</figcaption>
-            </div>
-            <div class="views-images">            
-                <img src="assets/images/killarney-images/killarney-ladies-view.jpg" alt="Ladies' View" class="parks-images">
-                <figcaption>Ladies' View</figcaption>
-            </div>
-            <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-strickeen.jpg" alt="View from Strickeen Mountain" class="parks-images">
-                <figcaption>View from Strickeen Mountain</figcaption>
-            </div>
-            <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
-                <figcaption>View from Tork Mountain</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
+                    <figcaption>Sika Stags (Cervus nippon)</figcaption>
+                </figure>
             </div>
         </div>
 
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
-                <figcaption>Aghadoe Ruins</figcaption>
+                <figure>
+                    <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
+                    <figcaption>View from Aghadoe</figcaption>
+                </figure>
             </div>
-            <div>            
-                <img src="assets/images/killarney-images/inisfallen-ruins.jpg" alt="Inisfallen Ruins" class="parks-images">
-                <figcaption>Inisfallen Ruins</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/killarney-images/muckross-abbey.jpg" alt="Muckross Abbey" class="parks-images">
-                <figcaption>Muckross Abbey</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/killarney-images/old-weir-bridge.JPG" alt="Old Weir Bridge" class="parks-images">
-                <figcaption>Old Weir Bridge</figcaption>
+            <div> 
+                <figure>           
+                    <img src="assets/images/killarney-images/killarney-ladies-view.jpg" alt="Ladies' View" class="parks-images">
+                    <figcaption>Ladies' View</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/killarney-images/ross-castle.jpg" alt="Ross Castle" class="parks-images">
-                <figcaption>Ross Castle</figcaption>
+                <figure>
+                    <img src="assets/images/killarney-images/killarney-strickeen.jpg" alt="View from Strickeen Mountain" class="parks-images">
+                    <figcaption>View from Strickeen Mountain</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
+                    <figcaption>View from Tork Mountain</figcaption>
+                </figure>
+            </div>
+        </div>
+
+        <div class="div-parks-images">
+            <div>
+                <figure>
+                    <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
+                    <figcaption>Aghadoe Ruins</figcaption>
+                </figure>
+            </div>
+            <div> 
+                <figure>           
+                    <img src="assets/images/killarney-images/inisfallen-ruins.jpg" alt="Inisfallen Ruins" class="parks-images">
+                    <figcaption>Inisfallen Ruins</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/killarney-images/muckross-abbey.jpg" alt="Muckross Abbey" class="parks-images">
+                    <figcaption>Muckross Abbey</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/killarney-images/old-weir-bridge.JPG" alt="Old Weir Bridge" class="parks-images">
+                    <figcaption>Old Weir Bridge</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/killarney-images/ross-castle.jpg" alt="Ross Castle" class="parks-images">
+                    <figcaption>Ross Castle</figcaption>
+                </figure>
             </div>
         </div>
 
