--- a/signup.html
+++ b/signup.html
@@ -42,11 +42,11 @@
                 </div>
                 <div class="texts">
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email">
                 </div>
                 <div>
                     <label for="fitness-level">Fitness Level</label>
-                    <select name="fitness-level" id="fitness-level" required>
+                    <select name="fitness-level" id="fitness-level">
                         <option value="low">Low (can't walk more than an hour)</option>
                         <option value="moderate">Moderate (usually does more than 4 hour hikes)</option>
                         <option value="high">High (has done hikes of days)</option>
