--- a/ballycroy.html
+++ b/ballycroy.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 8.4/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/bellmulet-and-ballina-road-circular" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/bellmulet-and-ballina-road-circular" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 8.6/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/lough-aroher-loop" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/lough-aroher-loop" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 8.1/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/the-bangor-trail" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/the-bangor-trail" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
@@ -87,67 +87,94 @@
         <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/ballycroy/golden-plover.jpg" alt="Golden Plover (Pluvialis apricaria)" class="parks-images">
-                <figcaption>Golden Plover (Pluvialis apricaria)</figcaption>
-            </div>
-            <div>            
-                <img src="assets/images/ballycroy/greenland-goose.jpg" alt="Greenland White-fronted Goose (Anser albifrons flavirostris)" class="parks-images">
-                <figcaption>Greenland White-fronted Goose (Anser albifrons flavirostris)</figcaption>
+                <figure>
+                    <img src="assets/images/ballycroy/golden-plover.jpg" alt="Golden Plover (Pluvialis apricaria)" class="parks-images">
+                    <figcaption>Golden Plover (Pluvialis apricaria)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/ballycroy/irish-hare.jpg" alt="Irish Hare (Lepidus timidus hibernicus)" class="parks-images">
-                <figcaption>Irish Hare (Lepidus timidus hibernicus)</figcaption>
+                <figure>        
+                    <img src="assets/images/ballycroy/greenland-goose.jpg" alt="Greenland White-fronted Goose (Anser albifrons flavirostris)" class="parks-images">
+                    <figcaption>Greenland White-fronted Goose (Anser albifrons flavirostris)</figcaption>
+                </figure> 
             </div>
             <div>
-                <img src="assets/images/ballycroy/rook.jpg" alt="Rook (Corvus frugilegus)" class="parks-images">
-                <figcaption>Rook (Corvus frugilegus)</figcaption>
+                <figure>
+                    <img src="assets/images/ballycroy/irish-hare.jpg" alt="Irish Hare (Lepidus timidus hibernicus)" class="parks-images">
+                    <figcaption>Irish Hare (Lepidus timidus hibernicus)</figcaption>
+                </figure> 
             </div>
             <div>
+                <figure>
+                    <img src="assets/images/ballycroy/rook.jpg" alt="Rook (Corvus frugilegus)" class="parks-images">
+                    <figcaption>Rook (Corvus frugilegus)</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
                 <img src="assets/images/ballycroy/grey-heron.jpg" alt="Grey Heron (Ardea cinerea)" class="parks-images">
-                 <figcaption>Grey Heron (Ardea cinerea)</figcaption>
+                <figcaption>Grey Heron (Ardea cinerea)</figcaption>
+                </figure>
             </div>
         </div>
         <div class="div-parks-images">
-            <div class="views-images">
-                <img src="assets/images/ballycroy/keem-beach.jpg" alt="Keem Beach" class="parks-images">
-                <figcaption>Keem Beach</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/ballycroy/keem-beach.jpg" alt="Keem Beach" class="parks-images">
+                    <figcaption>Keem Beach</figcaption>
+                </figure>
             </div>
-            <div class="views-images">            
-                <img src="assets/images/ballycroy/nephin-beg.png" alt="Nephin Beg Mountain" class="parks-images">
-                <figcaption>Nephin Beg Mountain</figcaption>
+            <div>    
+                <figure>       
+                    <img src="assets/images/ballycroy/nephin-beg.png" alt="Nephin Beg Mountain" class="parks-images">
+                    <figcaption>Nephin Beg Mountain</figcaption>
+                </figure> 
             </div>
-            <div class="views-images">
-                <img src="assets/images/ballycroy/correen-more.jpg" alt="View from Correen More" class="parks-images">
-                <figcaption>View from Correen More</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/ballycroy/correen-more.jpg" alt="View from Correen More" class="parks-images">
+                    <figcaption>View from Correen More</figcaption>
+                </figure> 
             </div>
-            <div class="views-images">
-                <img src="assets/images/ballycroy/altaconey-river.jpg" alt="Altaconey River" class="parks-images">
-                <figcaption>Altaconey River</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/ballycroy/altaconey-river.jpg" alt="Altaconey River" class="parks-images">
+                    <figcaption>Altaconey River</figcaption>
+                </figure>
             </div>
         </div>
 
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/ballycroy/scardaun-ruins.webp" alt="Scardaun Ruins" class="parks-images">
-                <figcaption>Scardaun Ruins</figcaption>
+                <figure>
+                    <img src="assets/images/ballycroy/scardaun-ruins.webp" alt="Scardaun Ruins" class="parks-images">
+                    <figcaption>Scardaun Ruins</figcaption>
+                </figure>
             </div>
-            <div>            
-                <img src="assets/images/ballycroy/rockfleet-castle.jpg" alt="Rockfleet Castle" class="parks-images">
-                <figcaption>Rockfleet Castle</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/ballycroy/burrishoole-abbey.jpg" alt="Burrishoole Abbey" class="parks-images">
-                <figcaption>Burrishoole Abbey</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/ballycroy/mulranny-causeway.jpg" alt="Mulranny Causeway" class="parks-images">
-                <figcaption>Mulranny Causeway</figcaption>
+            <div>  
+                <figure>
+                    <img src="assets/images/ballycroy/rockfleet-castle.jpg" alt="Rockfleet Castle" class="parks-images">
+                    <figcaption>Rockfleet Castle</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/ballycroy/slieve-carr.jpg" alt="Slieve Carr" class="parks-images">
-                <figcaption>Slieve Carr</figcaption>
+                <figure>
+                    <img src="assets/images/ballycroy/burrishoole-abbey.jpg" alt="Burrishoole Abbey" class="parks-images">
+                    <figcaption>Burrishoole Abbey</figcaption>
+                </figure>
             </div>
-        </div>
+            <div>
+                <figure>
+                    <img src="assets/images/ballycroy/mulranny-causeway.jpg" alt="Mulranny Causeway" class="parks-images">
+                    <figcaption>Mulranny Causeway</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/ballycroy/slieve-carr.jpg" alt="Slieve Carr" class="parks-images">
+                    <figcaption>Slieve Carr</figcaption>
+                </figure>
+            </div>
         </div>
 
         <footer>
