--- a/connemara.html
+++ b/connemara.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 8.8/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-galway/lower-diamond-hill-loop" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/lower-diamond-hill-loop" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 8.8/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-galway/derryinver-tully-hill" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/derryinver-tully-hill" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 9.2/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-galway/letterfrack-and-diamond-hill-loop" target="_blank" id="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/letterfrack-and-diamond-hill-loop" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
@@ -86,64 +86,92 @@
         <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/connemara/common-snipe.jpg" alt="Common Snipe (Gallinago gallinago)" class="parks-images">
-                <figcaption>Common Snipe (Gallinago gallinago)</figcaption>
+                <figure>
+                    <img src="assets/images/connemara/common-snipe.jpg" alt="Common Snipe (Gallinago gallinago)" class="parks-images">
+                    <figcaption>Common Snipe (Gallinago gallinago)</figcaption>
+                </figure>
             </div>
-            <div>            
-                <img src="assets/images/connemara/chaffinch.jpg" alt="Chaffinch (Fringilla coelebs)" class="parks-images">
-                <figcaption>Chaffinch (Fringilla coelebs)</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/connemara/eurasian-sparrowhook.jpg" alt="Eurasian sparrowhawk (Accipiter nisus)" class="parks-images">
-                <figcaption>Eurasian sparrowhawk (Accipiter nisus)</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/connemara/red-fox.jpg" alt="Red Fox (Vulpes vulpes)" class="parks-images">
-                <figcaption>Red Fox (Vulpes vulpes)</figcaption>
+            <div> 
+                <figure>           
+                    <img src="assets/images/connemara/chaffinch.jpg" alt="Chaffinch (Fringilla coelebs)" class="parks-images">
+                    <figcaption>Chaffinch (Fringilla coelebs)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/connemara/wild-goat.jpg" alt="Wild Goat (Capra aegagrus)" class="parks-images">
-                <figcaption>Wild Goat (Capra aegagrus)</figcaption>
+                <figure>
+                    <img src="assets/images/connemara/eurasian-sparrowhook.jpg" alt="Eurasian sparrowhawk (Accipiter nisus)" class="parks-images">
+                    <figcaption>Eurasian sparrowhawk (Accipiter nisus)</figcaption>
+                </figure>
             </div>
-        </div>
-        <div class="div-parks-images">
-            <div class="views-images">
-                <img src="assets/images/connemara/diamond-hill.jpg" alt="View from Diamond Hill" class="parks-images">
-                <figcaption>View from Diamond Hill</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/connemara/red-fox.jpg" alt="Red Fox (Vulpes vulpes)" class="parks-images">
+                    <figcaption>Red Fox (Vulpes vulpes)</figcaption>
+                </figure>
             </div>
-            <div class="views-images">            
-                <img src="assets/images/connemara/maumturk-mountains.jpg" alt="Maumturk Mountains" class="parks-images">
-                <figcaption>Maumturk Mountains</figcaption>
-            </div>
-            <div class="views-images">
-                <img src="assets/images/connemara/benchoona-mountain.jpg" alt="Benchoona Mountain" class="parks-images">
-                <figcaption>Benchoona Mountain</figcaption>
-            </div>
-            <div class="views-images">
-                <img src="assets/images/connemara/tully-mountain.webp" alt="Tully Mountain" class="parks-images">
-                <figcaption>Tully Mountain</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/connemara/wild-goat.jpg" alt="Wild Goat (Capra aegagrus)" class="parks-images">
+                    <figcaption>Wild Goat (Capra aegagrus)</figcaption>
+                </figure>
             </div>
         </div>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/connemara/derryinver-bridge.jpg" alt="Derryinver Bridge" class="parks-images">
-                <figcaption>Derryinver Bridge</figcaption>
+                <figure>
+                    <img src="assets/images/connemara/diamond-hill.jpg" alt="View from Diamond Hill" class="parks-images">
+                    <figcaption>View from Diamond Hill</figcaption>
+                </figure>
             </div>
-            <div>            
-                <img src="assets/images/connemara/inishfobin-island.jpg" alt="Inishfobin Island" class="parks-images">
-                <figcaption>Inishfobin Island</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/connemara/knockbrack.jpg" alt="Knockbrack Burial Chamber" class="parks-images">
-                <figcaption>Knockbrack Burial Chamber</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/connemara/clifden.jpg" alt="Clifden City" class="parks-images">
-                <figcaption>Clifden City</figcaption>
+            <div>   
+                <figure>         
+                    <img src="assets/images/connemara/maumturk-mountains.jpg" alt="Maumturk Mountains" class="parks-images">
+                    <figcaption>Maumturk Mountains</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/connemara/standing-stones.webp" alt="Standing Stones" class="parks-images">
-                <figcaption>Standing Stones</figcaption>
+                <figure>
+                    <img src="assets/images/connemara/benchoona-mountain.jpg" alt="Benchoona Mountain" class="parks-images">
+                    <figcaption>Benchoona Mountain</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/connemara/tully-mountain.webp" alt="Tully Mountain" class="parks-images">
+                    <figcaption>Tully Mountain</figcaption>
+                </figure>
+            </div>
+        </div>
+        <div class="div-parks-images">
+            <div>
+                <figure>
+                    <img src="assets/images/connemara/derryinver-bridge.jpg" alt="Derryinver Bridge" class="parks-images">
+                    <figcaption>Derryinver Bridge</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>            
+                    <img src="assets/images/connemara/inishfobin-island.jpg" alt="Inishfobin Island" class="parks-images">
+                    <figcaption>Inishfobin Island</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/connemara/knockbrack.jpg" alt="Knockbrack Burial Chamber" class="parks-images">
+                    <figcaption>Knockbrack Burial Chamber</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/connemara/clifden.jpg" alt="Clifden City" class="parks-images">
+                    <figcaption>Clifden City</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/connemara/standing-stones.webp" alt="Standing Stones" class="parks-images">
+                    <figcaption>Standing Stones</figcaption>
+                </figure>
             </div>
         </div>
 
