--- a/wicklow.html
+++ b/wicklow.html
@@ -49,7 +49,7 @@
                         <li><strong>Rating:</strong> 9.2/10</li>
                     </ul>
                     <div class="hike-link-div">
-                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/miners-road-walk" target="_blank" id="hike-link">Hike Details</a>
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/miners-road-walk" target="_blank" class="hike-link">Hike Details</a>
                         </div>
                 </div>
                 <div class="hike-rec">
@@ -63,7 +63,7 @@
                         <li><strong>Rating:</strong> 9.2/10</li>
                     </ul>
                     <div class="hike-link-div">
-                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/the-spink-loop" target="_blank" id="hike-link">Hike Details</a>
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/the-spink-loop" target="_blank" class="hike-link">Hike Details</a>
                     </div>
                 </div>
                 <div class="hike-rec">
@@ -77,7 +77,7 @@
                         <li><strong>Rating:</strong> 9.0/10</li>
                     </ul>
                     <div class="hike-link-div">
-                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/1798-memorial-to-lugnaquilla" target="_blank" id="hike-link">Hike Details</a>
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/1798-memorial-to-lugnaquilla" target="_blank" class="hike-link">Hike Details</a>
                     </div>
                 </div>
             </div>
@@ -85,66 +85,94 @@
         <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/wicklow/natterjack-toad.jpg" alt="Natterjack Toad (Epidalea calamita)" class="parks-images">
-                <figcaption>Natterjack Toad (Epidalea calamita)</figcaption>
+                <figure>
+                    <img src="assets/images/wicklow/natterjack-toad.jpg" alt="Natterjack Toad (Epidalea calamita)" class="parks-images">
+                    <figcaption>Natterjack Toad (Epidalea calamita)</figcaption>
+                </figure>
             </div>
-            <div>            
-                <img src="assets/images/wicklow/water-rail.jpg" alt="Water Rail (Rallus aquaticus)" class="parks-images">
-                <figcaption>Water Rail (Rallus aquaticus)</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/wicklow/daubentons-bat.jpg" alt="Daubenton's Bat (Myotis daubenonii)" class="parks-images">
-                <figcaption>Daubenton's Bat (Myotis daubenonii)</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/wicklow/hedgehog.webp" alt="Hedgehog (Erinaceus europaeus)" class="parks-images">
-                <figcaption>Hedgehog (Erinaceus europaeus)</figcaption>
+            <div>    
+                <figure>        
+                    <img src="assets/images/wicklow/water-rail.jpg" alt="Water Rail (Rallus aquaticus)" class="parks-images">
+                    <figcaption>Water Rail (Rallus aquaticus)</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/wicklow/fallow-deer.jpg" alt="Fallow Deer (Dama dama)" class="parks-images">
-                <figcaption>Fallow Deer (Dama dama)</figcaption>
+                <figure>
+                    <img src="assets/images/wicklow/daubentons-bat.jpg" alt="Daubenton's Bat (Myotis daubenonii)" class="parks-images">
+                    <figcaption>Daubenton's Bat (Myotis daubenonii)</figcaption>
+                </figure>
             </div>
-        </div>
-
-        <div class="div-parks-images">
-            <div class="views-images">
-                <img src="assets/images/wicklow/silver-strand.jpg" alt="Silver Strand Beach" class="parks-images">
-                <figcaption>Silver Strand Beach</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/wicklow/hedgehog.webp" alt="Hedgehog (Erinaceus europaeus)" class="parks-images">
+                    <figcaption>Hedgehog (Erinaceus europaeus)</figcaption>
+                </figure>
             </div>
-            <div class="views-images">            
-                <img src="assets/images/wicklow/sally-gap.jpg" alt="Sally Gap" class="parks-images">
-                <figcaption>Sally Gap</figcaption>
-            </div>
-            <div class="views-images">
-                <img src="assets/images/wicklow/glendalough-upper-lake.jpg" alt="Glendalough Upper Lake" class="parks-images">
-                <figcaption>Glendalough Upper Lake</figcaption>
-            </div>
-            <div class="views-images">
-                <img src="assets/images/wicklow/powerscourt-waterfall.jpg" alt="Powerscourt Waterfall" class="parks-images">
-                <figcaption>Powerscourt Waterfall</figcaption>
+            <div>
+                <figure>
+                    <img src="assets/images/wicklow/fallow-deer.jpg" alt="Fallow Deer (Dama dama)" class="parks-images">
+                    <figcaption>Fallow Deer (Dama dama)</figcaption>
+                </figure>
             </div>
         </div>
 
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/wicklow/aghowle-church.jpg" alt="Aghowle Church" class="parks-images">
-                <figcaption>Aghowle Church</figcaption>
+                <figure>
+                    <img src="assets/images/wicklow/silver-strand.jpg" alt="Silver Strand Beach" class="parks-images">
+                    <figcaption>Silver Strand Beach</figcaption>
+                </figure>
             </div>
-            <div>            
-                <img src="assets/images/wicklow/gates-of-heaven.webp" alt="Gates of Heaven" class="parks-images">
-                <figcaption>Gates of Heaven</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/wicklow/st-crispins-cell.jpg" alt="St. Crispin's Cell" class="parks-images">
-                <figcaption>St. Crispin's Cell</figcaption>
-            </div>
-            <div>
-                <img src="assets/images/wicklow/bray-head-cross.jpg" alt="Bray Head Cross" class="parks-images">
-                <figcaption>Bray Head Cross</figcaption>
+            <div>  
+                <figure>          
+                    <img src="assets/images/wicklow/sally-gap.jpg" alt="Sally Gap" class="parks-images">
+                    <figcaption>Sally Gap</figcaption>
+                </figure>
             </div>
             <div>
-                <img src="assets/images/wicklow/medieval-graveslab-hollywood.jpg" alt="Medieval Graveslabs at Hollywood" class="parks-images">
-                <figcaption>Medieval Graveslabs at Hollywood</figcaption>
+                <figure>
+                    <img src="assets/images/wicklow/glendalough-upper-lake.jpg" alt="Glendalough Upper Lake" class="parks-images">
+                    <figcaption>Glendalough Upper Lake</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/wicklow/powerscourt-waterfall.jpg" alt="Powerscourt Waterfall" class="parks-images">
+                    <figcaption>Powerscourt Waterfall</figcaption>
+                </figure>
+            </div>
+        </div>
+
+        <div class="div-parks-images">
+            <div>
+                <figure>
+                    <img src="assets/images/wicklow/aghowle-church.jpg" alt="Aghowle Church" class="parks-images">
+                    <figcaption>Aghowle Church</figcaption>
+                </figure>
+            </div>
+            <div>  
+                <figure>          
+                    <img src="assets/images/wicklow/gates-of-heaven.webp" alt="Gates of Heaven" class="parks-images">
+                    <figcaption>Gates of Heaven</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/wicklow/st-crispins-cell.jpg" alt="St. Crispin's Cell" class="parks-images">
+                    <figcaption>St. Crispin's Cell</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/wicklow/bray-head-cross.jpg" alt="Bray Head Cross" class="parks-images">
+                    <figcaption>Bray Head Cross</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/images/wicklow/medieval-graveslab-hollywood.jpg" alt="Medieval Graveslabs at Hollywood" class="parks-images">
+                    <figcaption>Medieval Graveslabs at Hollywood</figcaption>
+                </figure>
             </div>
         </div>
 
