--- a/ballycroy.html
+++ b/ballycroy.html
@@ -147,7 +147,7 @@
         <div class="div-parks-images">
             <div>
                 <figure>
-                    <img src="assets/images/ballycroy/scardaun-ruins.webp" alt="Scardaun Ruins" class="parks-images">
+                    <img src="assets/images/ballycroy/scardaun-ruins.jpg" alt="Scardaun Ruins" class="parks-images">
                     <figcaption>Scardaun Ruins</figcaption>
                 </figure>
             </div>
