--- a/burren.html
+++ b/burren.html
@@ -126,7 +126,7 @@
             </div>
             <div> 
                 <figure>           
-                    <img src="assets/images/burren/ailiwee-caves.webp" alt="Ailwee Caves" class="parks-images">
+                    <img src="assets/images/burren/aillwee-cave.jpg" alt="Ailwee Caves" class="parks-images">
                     <figcaption>Ailwee Caves</figcaption>
                 </figure>
             </div>
@@ -147,7 +147,7 @@
         <div class="div-parks-images">
             <div>
                 <figure>
-                    <img src="assets/images/burren/poulnabrone-dolmen.webp" alt="Poulnabrone Dolmen" class="parks-images">
+                    <img src="assets/images/burren/poulnabrone-dolmen.jpg" alt="Poulnabrone Dolmen" class="parks-images">
                     <figcaption>Poulnabrone Dolmen</figcaption>
                 </figure>
             </div>
