--- a/connemara.html
+++ b/connemara.html
@@ -137,7 +137,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="assets/images/connemara/tully-mountain.webp" alt="Tully Mountain" class="parks-images">
+                    <img src="assets/images/connemara/tully-mountain.jpg" alt="Tully Mountain" class="parks-images">
                     <figcaption>Tully Mountain</figcaption>
                 </figure>
             </div>
@@ -169,7 +169,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="assets/images/connemara/standing-stones.webp" alt="Standing Stones" class="parks-images">
+                    <img src="assets/images/connemara/standing-stones.jpg" alt="Standing Stones" class="parks-images">
                     <figcaption>Standing Stones</figcaption>
                 </figure>
             </div>
