--- a/glenveah.html
+++ b/glenveah.html
@@ -87,7 +87,7 @@
         <div class="div-parks-images">
             <div>
                 <figure>
-                    <img src="assets/images/glenveagh/smooth-newt.webp" alt="Smooth Newt (Lissotriton vulgaris)" class="parks-images">
+                    <img src="assets/images/glenveagh/smooth-newt.jpg" alt="Smooth Newt (Lissotriton vulgaris)" class="parks-images">
                     <figcaption>Smooth Newt (Lissotriton vulgaris)</figcaption>
                 </figure>
             </div>
