--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
         <h2 id="sign-up-heading">Do you want to know more?</h2>
         
         <div id="form-div">
-            <h2>Sign Up for our Newsletter!</h2>
+            <h2>Sign Up to our Newsletter!</h2>
             <form action="https://formdump.codeinstitute.net/" method="post">
                 <div class="texts">
                     <label for="name">Name:</label>
