--- a/wicklow.html
+++ b/wicklow.html
@@ -104,7 +104,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="assets/images/wicklow/hedgehog.webp" alt="Hedgehog (Erinaceus europaeus)" class="parks-images">
+                    <img src="assets/images/wicklow/hedgehog.jpg" alt="Hedgehog (Erinaceus europaeus)" class="parks-images">
                     <figcaption>Hedgehog (Erinaceus europaeus)</figcaption>
                 </figure>
             </div>
@@ -152,7 +152,7 @@
             </div>
             <div>  
                 <figure>          
-                    <img src="assets/images/wicklow/gates-of-heaven.webp" alt="Gates of Heaven" class="parks-images">
+                    <img src="assets/images/wicklow/gates-of-heaven.jpg" alt="Gates of Heaven" class="parks-images">
                     <figcaption>Gates of Heaven</figcaption>
                 </figure>
             </div>
