--- a/signup.html
+++ b/signup.html
@@ -48,7 +48,7 @@
                     <label for="fitness-level">Fitness Level</label>
                     <select name="fitness-level" id="fitness-level">
                         <option value="low">Low (can't walk more than an hour)</option>
-                        <option value="moderate">Moderate (usually does more than 4 hour hikes)</option>
+                        <option value="moderate">Moderate (can do 4 hour hikes)</option>
                         <option value="high">High (has done hikes of days)</option>
                     </select>
                 </div>
