Improve footer accessibility by adding aria-labels

--- a/ballycroy.html
+++ b/ballycroy.html
@@ -180,9 +180,9 @@
         <footer>
             <ul class="footer-list">
                 <li id="footer-list-p">Ireland's National Parks</li>
-                <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook footer-a"></i></a></li>
-                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram footer-a"></i></a></li>
-                <li><a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter footer-a"></i></a></li>
+                <li><a href="https://www.facebook.com/" aria-label="Go to our facebook page (opens in new tab)" target="_blank"><i class="fa-brands fa-facebook footer-a"></i></a></li>
+                <li><a href="https://www.instagram.com/" aria-label="Go to our instagram page (opens in new tab)" target="_blank"><i class="fa-brands fa-instagram footer-a"></i></a></li>
+                <li><a href="https://www.twitter.com/" aria-label="Go to our twitter page (opens in new tab)" target="_blank"><i class="fa-brands fa-twitter footer-a"></i></a></li>
             </ul>
         </footer>
 
